--- a/EMD/Views/EMDs/Edit.cshtml
+++ b/EMD/Views/EMDs/Edit.cshtml
@@ -52,6 +52,15 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group row">
+
+                        <div class="col-1">
+                            <label asp-for="EMDTbl.Number" class="control-label"></label>
+                        </div>
+                        <div class="col-3">
+                            <input asp-for="EMDTbl.Number" class="form-control" id="txtNumber1" />
+                            <span asp-validation-for="EMDTbl.Number" class="text-danger"></span>
+                        </div>
+
                         <div class="col-1">
                             <label asp-for="EMDTbl.SGTCode" class="control-label"></label>
                         </div>
@@ -65,27 +74,28 @@
                             <label asp-for="EMDTbl.BatDau" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" asp-for="EMDTbl.BatDau" class="form-control datepicker maskInput" id="txtBatDau" />
+                            <input type="text" asp-for="EMDTbl.BatDau" class="form-control maskInput" id="txtBatDau" />
                             <span asp-validation-for="EMDTbl.BatDau" class="text-danger"></span>
                         </div>
 
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.KetThuc" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <input type="text" asp-for="EMDTbl.KetThuc" class="form-control datepicker maskInput" id="txtKetThuc" />
-                            <span asp-validation-for="EMDTbl.KetThuc" class="text-danger"></span>
-                        </div>
-
+                        
                     </div>
 
                     <div class="form-group row">
 
                         <div class="col-1">
+                            <label asp-for="EMDTbl.KetThuc" class="control-label"></label>
+                        </div>
+                        <div class="col-3">
+                            <input type="text" asp-for="EMDTbl.KetThuc" class="form-control maskInput" id="txtKetThuc" />
+                            <span asp-validation-for="EMDTbl.KetThuc" class="text-danger"></span>
+                        </div>
+
+                        <div class="col-1">
                             <label asp-for="EMDTbl.NgayDC" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" asp-for="EMDTbl.NgayDC" class="form-control datepicker maskInput" />
+                            <input type="text" asp-for="EMDTbl.NgayDC" class="form-control maskInput" />
                             <span asp-validation-for="EMDTbl.NgayDC" class="text-danger"></span>
                         </div>
 
@@ -94,9 +104,14 @@
                             <label asp-for="EMDTbl.HetHan" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" asp-for="EMDTbl.HetHan" class="form-control datepicker maskInput" />
+                            <input type="text" asp-for="EMDTbl.HetHan" class="form-control maskInput" />
                             <span asp-validation-for="EMDTbl.HetHan" class="text-danger"></span>
                         </div>
+
+
+                    </div>
+
+                    <div class="form-group row">
 
                         <div class="col-1">
                             <label asp-for="EMDTbl.SLVeDatCoc" class="control-label"></label>
@@ -104,17 +119,6 @@
                         <div class="col-3">
                             <input asp-for="EMDTbl.SLVeDatCoc" class="form-control" id="txtSLVeDatCoc" />
                             <span asp-validation-for="EMDTbl.SLVeDatCoc" class="text-danger"></span>
-                        </div>
-
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.Number" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <input asp-for="EMDTbl.Number" class="form-control" />
-                            <span asp-validation-for="EMDTbl.Number" class="text-danger"></span>
                         </div>
 
 
@@ -143,7 +147,7 @@
                             <label asp-for="EMDTbl.HoanCoc" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" asp-for="EMDTbl.HoanCoc" class="form-control datepicker maskInput" />
+                            <input type="text" asp-for="EMDTbl.HoanCoc" class="form-control maskInput" />
                             <span asp-validation-for="EMDTbl.HoanCoc" class="text-danger"></span>
                         </div>
 
@@ -188,7 +192,7 @@
                             <label asp-for="EMDTbl.NgayPhat" class="control-label "></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" asp-for="EMDTbl.NgayPhat" class="form-control datepicker maskInput" />
+                            <input type="text" asp-for="EMDTbl.NgayPhat" class="form-control maskInput" />
                             <span asp-validation-for="EMDTbl.NgayPhat" class="text-danger"></span>
                         </div>
 
@@ -237,21 +241,9 @@
                             <label asp-for="EMDTbl.DongHoSo" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" asp-for="EMDTbl.DongHoSo" class="form-control datepicker maskInput" />
+                            <input type="text" asp-for="EMDTbl.DongHoSo" class="form-control maskInput" />
                             <span asp-validation-for="EMDTbl.DongHoSo" class="text-danger"></span>
                         </div>
-
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.NguoiNhap" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <input asp-for="EMDTbl.NguoiNhap" class="form-control" readonly />
-                            <span asp-validation-for="EMDTbl.NguoiNhap" class="text-danger"></span>
-                        </div>
-
-                    </div>
-
-                    <div class="form-group row">
 
                         <div class="col-1">
                             <label asp-for="EMDTbl.PNR" class="control-label"></label>
@@ -261,6 +253,36 @@
                             <span asp-validation-for="EMDTbl.PNR" class="text-danger"></span>
                         </div>
 
+                        
+
+                    </div>
+
+                    <div class="form-group row">
+
+                        <div class="col-1">
+                            <label asp-for="EMDTbl.NguoiNhap" class="control-label"></label>
+                        </div>
+                        <div class="col-3">
+                            <input asp-for="EMDTbl.NguoiNhap" class="form-control" readonly />
+                            <span asp-validation-for="EMDTbl.NguoiNhap" class="text-danger"></span>
+                        </div>
+
+                        <div class="col-1">
+                            <label asp-for="EMDTbl.SLVeHoan" class="control-label"></label>
+                        </div>
+                        <div class="col-3">
+                            <input asp-for="EMDTbl.SLVeHoan" class="form-control " id="txtNguoiNhap" readonly />
+                            <span asp-validation-for="EMDTbl.SLVeHoan" class="text-danger"></span>
+                        </div>
+
+                        <div class="col-1">
+                            <label asp-for="EMDTbl.ThucTra" class="control-label"></label>
+                        </div>
+                        <div class="col-3">
+                            <input asp-for="EMDTbl.ThucTra" class="form-control " id="txtNguoiNhap" readonly />
+                            <span asp-validation-for="EMDTbl.ThucTra" class="text-danger"></span>
+                        </div>
+
                     </div>
 
                     <div class="form-group row">
@@ -268,7 +290,7 @@
                             <label asp-for="EMDTbl.DienGiai" class="control-label"></label>
                         </div>
                         <div class="col-11">
-                            <textarea asp-for="EMDTbl.DienGiai" class="form-control" rows="10"></textarea>
+                            <textarea asp-for="EMDTbl.DienGiai" class="form-control" rows="12"></textarea>
                             <span asp-validation-for="EMDTbl.DienGiai" class="text-danger"></span>
                         </div>
 
@@ -294,13 +316,13 @@
 <!-- /.content -->
 
 @section Scripts{
-    <script>
+    @*<script>
 
         $(function () {
             $(".datepicker").datepicker({
                 dateFormat: 'dd/mm/yy'
             });
         });
-    </script>
+    </script>*@
     <script src="~/js/Admin/EMD/editController.js"></script>
 }
