--- a/EMD/Views/EMDs/Create.cshtml
+++ b/EMD/Views/EMDs/Create.cshtml
@@ -96,7 +96,7 @@
                             <label asp-for="EMDTbl.NgayDC" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" asp-for="EMDTbl.NgayDC" class="form-control maskInput" />
+                            <input type="text" asp-for="EMDTbl.NgayDC" class="form-control maskInput" id="txtNgayDC" />
                             <span asp-validation-for="EMDTbl.NgayDC" class="text-danger"></span>
                         </div>
 
@@ -105,7 +105,7 @@
                             <label asp-for="EMDTbl.HetHan" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" value="" asp-for="EMDTbl.HetHan" class="form-control maskInput" />
+                            <input type="text" asp-for="EMDTbl.HetHan" class="form-control maskInput" id="txtHetHan"/>
                             <span asp-validation-for="EMDTbl.HetHan" class="text-danger"></span>
                         </div>
 
