--- a/EMD/Views/EMDs/Edit.cshtml
+++ b/EMD/Views/EMDs/Edit.cshtml
@@ -324,5 +324,5 @@
             });
         });
     </script>*@
-    <script src="~/js/Admin/EMD/editController.js"></script>
+    @*<script src="~/js/Admin/EMD/editController.js"></script>*@
 }
