--- a/EMD/Views/EMDs/Index.cshtml
+++ b/EMD/Views/EMDs/Index.cshtml
@@ -45,6 +45,7 @@
                         <thead>
                             <tr class="table-info">
                                 <th>#</th>
+                                <th style="min-width:130px">@Html.DisplayNameFor(m => m.EMDTbls.FirstOrDefault().Number)</th>
                                 <th style="min-width:130px">@Html.DisplayNameFor(m => m.EMDTbls.FirstOrDefault().SGTCode)</th>
                                 <th style="min-width:100px">@Html.DisplayNameFor(m => m.EMDTbls.FirstOrDefault().BatDau)</th>
                                 <th style="min-width:100px">@Html.DisplayNameFor(m => m.EMDTbls.FirstOrDefault().KetThuc)</th>
@@ -79,6 +80,7 @@
                                 <tr class="cursor-pointer">
                                     <partial name="_TableButtonPartial" model="item.Id" />
 
+                                    <td class="tdVal" data-id="@item.Id">@Html.DisplayFor(m => item.Number)</td>
                                     <td class="tdVal" data-id="@item.Id">@Html.DisplayFor(m => item.SGTCode)</td>
                                     @*@<td>Html.DisplayFor(m => item.BatDau)</td>*@
                                     <td class="tdVal" data-id="@item.Id">@Html.Raw(item.BatDau.Value.ToShortDateString())</td>
@@ -156,6 +158,7 @@
 <div id="detialsById">
 
 </div>
+
 
 
 @section Scripts{
