--- a/EMD/Views/EMDs/Edit.cshtml
+++ b/EMD/Views/EMDs/Edit.cshtml
@@ -57,7 +57,7 @@
                             <label asp-for="EMDTbl.Number" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.Number" class="form-control" id="txtNumber1" />
+                            <input asp-for="EMDTbl.Number" class="form-control" id="txtNumber1" readonly/>
                             <span asp-validation-for="EMDTbl.Number" class="text-danger"></span>
                         </div>
 
