--- a/EMD/Views/EMDs/Index.cshtml
+++ b/EMD/Views/EMDs/Index.cshtml
@@ -124,6 +124,7 @@
 
                                 <td @*style="width:150px;"*@>
                                     <div class="btn-group text-white" role="group">
+                                        <a class="btn btn-info btn-sm" title="EMD cấn trừ" asp-controller="EMDCanTrus" asp-action="EMDPlus" asp-route-emdOldId="@item.Id" asp-route-strUrl="@Model.StrUrl"><i class="fas fa-plus-square"></i></a>
                                         <a class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id" asp-route-strUrl="@Model.StrUrl"><i class="fas fa-edit"></i></a>
                                         <a class="btn btn-success btn-sm" asp-action="Details" asp-route-id="@Model"><i class="fas fa-list"></i></a>
                                         @*<a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@Model"><i class="fas fa-trash-alt"></i></a>*@
